<resources>
    <string name="app_name">Shopping List</string>
    <string-array name="category_names_array">
        <item>Food</item>
        <item>Electronic</item>
        <item>Book</item>
        <item>Other</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="runtimeError">The Activity is not implementing the ShoppingHandler interface.</string>
    <string name="edit_shopping">Edit Shopping</string>
    <string name="new_shopping">New Shopping</string>
    <string name="create">Create</string>
    <string name="cancelbtn">Cancel</string>
    <string name="empty_err">This field can not be empty</string>
    <string name="new_shop_item">New Shop Item</string>
    <string name="create_new_shop_description">Tap here to create new shop item</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="enter_item_price_here">Enter item price here</string>
    <string name="enter_item_name_here">Enter item name here</string>
    <string name="found">Found</string>
    <string name="name">Name</string>
    <string name="price">price: </string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="total_price">Total price: %1$s</string>
</resources>