<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etShopName"
        android:hint="@string/enter_item_name_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etShopPrice"
        android:inputType="number"
        android:hint="@string/enter_item_price_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etDescription"
        android:hint="@string/enter_description_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/cbShopDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found"/>

</LinearLayout>